--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/theme": "^2.2.9",
     "@reduxjs/toolkit": "^2.2.5",
     "@stomp/stompjs": "^7.0.0",
+    "@vercel/analytics": "^1.3.2",
     "framer-motion": "^11.3.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
