--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/theme": "^2.2.9",
     "@reduxjs/toolkit": "^2.2.5",
     "@stomp/stompjs": "^7.0.0",
+    "@types/react-slick": "^0.23.13",
     "framer-motion": "^11.3.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -25,7 +26,9 @@
     "react-naver-maps": "^0.1.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
     "react-spring-bottom-sheet": "^3.5.0-alpha.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.11",
