--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@vercel/analytics": "^1.4.0",
     "framer-motion": "^11.3.24",
+    "popstate-direction": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-mobile-picker": "^1.0.0",
